--- a/Portfolio/portfolio-elilan.html
+++ b/Portfolio/portfolio-elilan.html
@@ -469,7 +469,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="profile-section">
-                    <img src="/Portfolio/img/photoprofil.png" alt="Elilan Kanagarajah" class="profile-photo" id="profilePhoto" onerror="showInitials()">
+                    <img src="img/photoprofil.png" alt="Elilan Kanagarajah" class="profile-photo" id="profilePhoto" onerror="showInitials()">
                     <div class="profile-initials" id="profileInitials" style="display: none;">EK</div>
                 </div>
                 <div class="hero-text">
